Feat: Keep track of progress

--- a/test.ipynb
+++ b/test.ipynb
@@ -233,21 +233,12 @@
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/markheijnekamp/Documents/GitHub/LearningLion-kamervragen/utils.py:113: LangChainDeprecationWarning: The class `HuggingFaceEmbeddings` was deprecated in LangChain 0.2.2 and will be removed in 1.0. An updated version of the class exists in the :class:`~langchain-huggingface package and should be used instead. To use it run `pip install -U :class:`~langchain-huggingface` and import as `from :class:`~langchain_huggingface import HuggingFaceEmbeddings``.\n",
-      "  embeddings = HuggingFaceEmbeddings(\n",
-      "/opt/homebrew/lib/python3.11/site-packages/sentence_transformers/cross_encoder/CrossEncoder.py:13: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from tqdm.autonotebook import tqdm, trange\n",
-      "Downloading shards:   0%|          | 0/4 [00:00<?, ?it/s]"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "for time in range(10):\n",
+    "VALIDATIONLAPS = 10\n",
+    "current_item = 0\n",
+    "total_items = VALIDATIONLAPS * len(SPLITTING_METHODS) * len(CONTEXT_PRESENT) * len(EMBEDDINGS_MODELS)\n",
+    "for time in range(VALIDATIONLAPS):\n",
     "  for splittingMethod in SPLITTING_METHODS:\n",
     "    for context in CONTEXT_PRESENT:\n",
     "      for embeddingModel in EMBEDDINGS_MODELS:\n",
@@ -292,7 +283,7 @@
     "        \n",
     "        \n",
     "        \n",
-    "        print(\"done\")\n",
+    "        print(f\"done with {current_item} of {total_items}\")\n",
     "  print(f\"Done with iteration {time}\")"
    ]
   },
