Fix: Increment item

--- a/test.ipynb
+++ b/test.ipynb
@@ -242,6 +242,7 @@
     "  for splittingMethod in SPLITTING_METHODS:\n",
     "    for context in CONTEXT_PRESENT:\n",
     "      for embeddingModel in EMBEDDINGS_MODELS:\n",
+    "        current_item += 1\n",
     "        try:\n",
     "          chunk_size = CHUNK_SIZE\n",
     "          if splittingMethod == IngestionMode.token_small:\n",
