Fix: early exit

--- a/test.ipynb
+++ b/test.ipynb
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -322,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -335,19 +335,18 @@
     "df = pd.read_csv(question_sample_CSV)\n",
     "file_parser = FileParser()\n",
     "ingestutils = IngestUtils(CHUNK_SIZE, 0, None, TEXT_SPLITTER_METHOD)\n",
-    "for index, row in df.iterrows():\n",
-    "  if row[\"context\"] != \"\":\n",
-    "    continue\n",
-    "  # get file\n",
-    "  file = row[\"Filename\"]\n",
-    "  if file.endswith(\".pdf\"):\n",
-    "    file_path = os.path.join(my_folder_path_selected, file)\n",
-    "    raw_pages, metadata = file_parser.parse_file(file_path)\n",
-    "    documents = ingestutils.clean_text_to_docs(raw_pages, metadata)\n",
-    "    introduction = documents[0].page_content.split(\"vraag\")[0]\n",
+    "if 'context' not in df.columns:\n",
+    "  for index, row in df.iterrows():\n",
+    "    # get file\n",
+    "    file = row[\"Filename\"]\n",
+    "    if file.endswith(\".pdf\"):\n",
+    "      file_path = os.path.join(my_folder_path_selected, file)\n",
+    "      raw_pages, metadata = file_parser.parse_file(file_path)\n",
+    "      documents = ingestutils.clean_text_to_docs(raw_pages, metadata)\n",
+    "      introduction = documents[0].page_content.split(\"vraag\")[0]\n",
     "\n",
-    "  df.at[index, \"context\"] = introduction\n",
-    "  df.to_csv(question_sample_CSV, index=False)\n"
+    "    df.at[index, \"context\"] = introduction\n",
+    "    df.to_csv(question_sample_CSV, index=False)\n"
    ]
   },
   {
