--- a/LLMInferenceTester.ipynb
+++ b/LLMInferenceTester.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# LLM TIMER\n",
+    "# LLM Inference Tester\n",
     "\n",
     "What is the best method the use LLM inference? \n",
     "VLLM has been omitted due to permission errors. \n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
     "        updated_data = new_data\n",
     "        \n",
     "    updated_data.to_csv(file_path, index=False)\n",
-    "modelNames = [\"BramVanroy/fietje-2-chat\",\"BramVanroy/fietje-2\",\"BramVanroy/GEITje-7B-ultra\",\"Rijgersberg/GEITje-7B\",\"Qwen/Qwen2.5-1.5B-Instruct\"]\n",
+    "modelNames = [\"BramVanroy/fietje-2-chat\"]\n",
     "prompts = [\"Wat is de hoofdstad van Nederland?\", \"Wie is de primeur van nederland?\", \"Wat is het kwadraat van 5\", \"Hoeveel p's zijn er in appel?\"]"
    ]
   },
@@ -78,8 +78,10 @@
     "for generator in loadedModelPipeline:\n",
     "  for prompt in prompts:\n",
     "    startTime = time.time()\n",
-    "    response = generator(prompt)\n",
-    "    write_to_CSV(generator.model.config._name_or_path, startTime, time.time(), action, method, response)"
+    "    response = generator(prompt, max_length=1024, num_return_sequences=1)\n",
+    "    write_to_CSV(generator.model.config._name_or_path, startTime, time.time(), action, method, response)\n",
+    "    print(response)\n",
+    "    del generator"
    ]
   },
   {
@@ -103,8 +105,8 @@
     "  for i in range(10):\n",
     "    startTime = time.time()\n",
     "    model = AutoModelForCausalLM.from_pretrained(modelName, trust_remote_code=True, device_map='auto')\n",
+    "    loadedModelCasual.append(model)\n",
     "    tokenizer = AutoTokenizer.from_pretrained(modelName)\n",
-    "\n",
     "    input_ids = tokenizer(\"What is the color of prunes?,\", return_tensors='pt').to(model.device)[\"input_ids\"]\n",
     "    write_to_CSV(modelName, startTime, time.time(), action, method)"
    ]
@@ -119,16 +121,19 @@
     "for model in loadedModelCasual:\n",
     "  for prompt in prompts:\n",
     "    startTime = time.time()\n",
-    "    outputs = model.generate(input_ids, max_new_tokens=216)\n",
+    "    outputs = model.generate(input_ids, max_new_tokens=1024)\n",
     "    response = tokenizer.decode(outputs[0])\n",
-    "    write_to_CSV(modelName, startTime, time.time(), action, method,response)\n"
+    "    write_to_CSV(modelName, startTime, time.time(), action, method,response)\n",
+    "    del model\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Ollama"
+    "## Ollama\n",
+    "\n",
+    "There is no automatic download for ollama"
    ]
   },
   {
@@ -137,7 +142,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%pip install ollama"
+    "# %pip install ollama"
    ]
   },
   {
@@ -146,15 +151,77 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import ollama\n",
-    "startTime = time.time()\n",
-    "response = ollama.chat(model='llama3.1', messages=[\n",
-    "  {\n",
-    "    'role': 'user',\n",
-    "    'content': 'Why is the sky blue?',\n",
-    "  },\n",
-    "])\n",
-    "write_to_CSV(\"llama3.1\", startTime, time.time(), \"Inference\", \"ollama\", response)"
+    "# import ollama\n",
+    "# startTime = time.time()\n",
+    "# response = ollama.chat(model='llama3.1', messages=[\n",
+    "#   {\n",
+    "#     'role': 'user',\n",
+    "#     'content': 'Why is the sky blue?',\n",
+    "#   },\n",
+    "# ])\n",
+    "# write_to_CSV(\"llama3.1\", startTime, time.time(), \"Inference\", \"ollama\", response)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# ONNX"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%pip install git+https://github.com/huggingface/optimum.git"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import time\n",
+    "from transformers import pipeline\n",
+    "from optimum.onnxruntime import ORTModelForSequenceClassification\n",
+    "loadedModelOptimum = []\n",
+    "for modelName in modelNames:\n",
+    "    # modelName = \"BramVanroy/fietje-2-chat\"\n",
+    "    action = \"Load\"\n",
+    "    method = \"optimum.onnxruntime\"\n",
+    "    startTime = time.time()\n",
+    "    model = ORTModelForSequenceClassification.from_pretrained(modelName,from_transformers=True)\n",
+    "    tokenizer = AutoTokenizer.from_pretrained(modelName)\n",
+    "    generator = pipeline(model=model,tokenizer=tokenizer)\n",
+    "    print(generator.model.config._name_or_path)\n",
+    "    loadedModelPipeline.append(generator)\n",
+    "    # Time.Time works in seconds\n",
+    "    write_to_CSV(modelName, startTime, time.time(), action, method)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for model in loadedModelOptimum:\n",
+    "  for prompt in prompts:\n",
+    "    startTime = time.time()\n",
+    "    response = generator(prompt, max_length=1024, num_return_sequences=1)\n",
+    "    write_to_CSV(generator.model.config._name_or_path, startTime, time.time(), action, method, response)\n",
+    "    print(response)\n",
+    "    del generator"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Quantization"
    ]
   },
   {
