Fix: Indentation error

--- a/LLMInferenceTester.ipynb
+++ b/LLMInferenceTester.ipynb
@@ -42,7 +42,7 @@
     "        updated_data = new_data\n",
     "        \n",
     "    updated_data.to_csv(file_path, index=False)\n",
-    "modelNames = [\"BramVanroy/fietje-2-chat\"]\n",
+    "modelNames = [\"BramVanroy/fietje-2-chat\",\"BramVanroy/fietje-2\",\"BramVanroy/GEITje-7B-ultra\",\"Rijgersberg/GEITje-7B\",\"Qwen/Qwen2.5-1.5B-Instruct\"]\n",
     "prompts = [\"Wat is de hoofdstad van Nederland?\", \"Wie is de primeur van nederland?\", \"Wat is het kwadraat van 5\", \"Hoeveel p's zijn er in appel?\"]"
    ]
   },
@@ -123,7 +123,7 @@
     "    outputs = model.generate(input_ids, max_new_tokens=1024)\n",
     "    response = tokenizer.decode(outputs[0])\n",
     "    write_to_CSV(modelName, startTime, time.time(), action, method,response)\n",
-    "    del model\n"
+    "  del model\n"
    ]
   },
   {
@@ -213,7 +213,7 @@
     "    response = generator(prompt, max_length=1024, num_return_sequences=1)\n",
     "    write_to_CSV(generator.model.config._name_or_path, startTime, time.time(), action, method, response)\n",
     "    print(response)\n",
-    "    del generator"
+    "  del generator"
    ]
   },
   {
