Fix: tokenization when creating prompt for model

--- a/LLMInferenceTester.ipynb
+++ b/LLMInferenceTester.ipynb
@@ -86,7 +86,7 @@
     "    translatedPrompt = generator.tokenizer.apply_chat_template([\n",
     "      {\"role\": \"system\", \"content\": systemPrompt},\n",
     "      {\"role\": \"user\", \"content\": prompt}\n",
-    "      ])\n",
+    "      ], tokenize=False, add_generation_prompt=True)\n",
     "    startTime = time.time()\n",
     "    response = generator(translatedPrompt, max_length=1024, num_return_sequences=1)\n",
     "    write_to_CSV(generator.model.config._name_or_path, startTime, time.time(), action, method, response)\n",
@@ -139,10 +139,10 @@
     "for model in loadedModelCasual:\n",
     "  for prompt in prompts:\n",
     "    #  This is not being included in the timing\n",
-    "    translatedPrompt = model.tokenizer.apply_chat_template([\n",
+    "    translatedPrompt = generator.tokenizer.apply_chat_template([\n",
     "      {\"role\": \"system\", \"content\": systemPrompt},\n",
     "      {\"role\": \"user\", \"content\": prompt}\n",
-    "      ])\n",
+    "      ], tokenize=False, add_generation_prompt=True)\n",
     "    startTime = time.time()\n",
     "    outputs = model.generate(input_ids, max_new_tokens=1024)\n",
     "    response = tokenizer.decode(outputs[0])\n",
@@ -243,10 +243,10 @@
     "for model in loadedModelOptimum:\n",
     "  for prompt in prompts:\n",
     "    #  This is not being included in the timing\n",
-    "    translatedPrompt = model.tokenizer.apply_chat_template([\n",
+    "    translatedPrompt = generator.tokenizer.apply_chat_template([\n",
     "      {\"role\": \"system\", \"content\": systemPrompt},\n",
     "      {\"role\": \"user\", \"content\": prompt}\n",
-    "      ])\n",
+    "      ], tokenize=False, add_generation_prompt=True)\n",
     "    startTime = time.time()\n",
     "    response = generator(prompt, max_length=1024, num_return_sequences=1)\n",
     "    write_to_CSV(generator.model.config._name_or_path, startTime, time.time(), action, method, response)\n",
@@ -320,10 +320,10 @@
     "for model in models8Bit:\n",
     "  for prompt in prompts:\n",
     "    #  This is not being included in the timing\n",
-    "    translatedPrompt = model.tokenizer.apply_chat_template([\n",
+    "    translatedPrompt = generator.tokenizer.apply_chat_template([\n",
     "      {\"role\": \"system\", \"content\": systemPrompt},\n",
     "      {\"role\": \"user\", \"content\": prompt}\n",
-    "      ])\n",
+    "      ], tokenize=False, add_generation_prompt=True)\n",
     "    startTime = time.time()\n",
     "    outputs = model.generate(input_ids, max_new_tokens=1024)\n",
     "    response = tokenizer.decode(outputs[0])\n",
