--- a/LLMInferenceTester.ipynb
+++ b/LLMInferenceTester.ipynb
@@ -66,7 +66,7 @@
     "    method = \"transformers-pipeline\"\n",
     "    startTime = time.time()\n",
     "\n",
-    "    generator = pipeline(model=modelName)\n",
+    "    generator = pipeline(model=modelName, device=1)\n",
     "    print(generator.model.config._name_or_path)\n",
     "    loadedModelPipeline.append(generator)\n",
     "    # Time.Time works in seconds\n",
@@ -108,6 +108,15 @@
    "metadata": {},
    "source": [
     "## Causual Inference"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%pip install accelerate"
    ]
   },
   {
@@ -245,7 +254,7 @@
    "source": [
     "import time\n",
     "from transformers import pipeline\n",
-    "from optimum.onnxruntime import ORTModelForSequenceClassification\n",
+    "from optimum.onnxruntime import ORTModelForQuestionAnswering\n",
     "loadedModelOptimum = []\n",
     "loadedTokenizersOptimum = []\n",
     "for modelName in modelNames:\n",
@@ -253,7 +262,7 @@
     "    action = \"Load\"\n",
     "    method = \"optimum.onnxruntime\"\n",
     "    startTime = time.time()\n",
-    "    model = ORTModelForSequenceClassification.from_pretrained(modelName,from_transformers=True)\n",
+    "    model = ORTModelForQuestionAnswering.from_pretrained(modelName,from_transformers=True, provider='CUDAExecutionProvider')\n",
     "    tokenizer = AutoTokenizer.from_pretrained(modelName)\n",
     "    loadedModelOptimum.append(model)\n",
     "    generator = pipeline(model=model,tokenizer=tokenizer)\n",
