--- a/LLMInferenceTester.ipynb
+++ b/LLMInferenceTester.ipynb
@@ -66,7 +66,7 @@
     "    method = \"transformers-pipeline\"\n",
     "    startTime = time.time()\n",
     "\n",
-    "    generator = pipeline(model=modelName, device=1)\n",
+    "    generator = pipeline(model=modelName, device=\"cuda\")\n",
     "    print(generator.model.config._name_or_path)\n",
     "    loadedModelPipeline.append(generator)\n",
     "    # Time.Time works in seconds\n",
