feat: Add more parameters for infer

--- a/run_local.ipynb
+++ b/run_local.ipynb
@@ -85,13 +85,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Loading checkpoint shards: 100%|██████████| 2/2 [00:08<00:00,  4.35s/it]\n",
+      "Truncation was not explicitly activated but `max_length` is provided a specific value, please use `truncation=True` to explicitly truncate examples to max length. Defaulting to 'longest_first' truncation strategy. If you encode pairs of sequences (GLUE-style) with the tokenizer you can select this strategy more precisely by providing a specific strategy to `truncation`.\n",
+      "Both `max_new_tokens` (=500) and `max_length`(=100) seem to have been set. `max_new_tokens` will take precedence. Please refer to the documentation for more information. (https://huggingface.co/docs/transformers/main/en/main_classes/text_generation)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model loaded\n",
+      "{'do_sample': True, 'temperature': 1.0, 'max_new_tokens': 500, 'max_length': 100}\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'Hoi! Als ik je nog kan helpen, laat het me zeker weten. Heb je nog andere vragen?'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from inference.run_local import infer_run_local\n",
     "\n",
-    "infer_run_local(\"hallo\")"
+    "infer_run_local(\"hallo\", systemPrompt=\"JIJ bent een robot\", generation_kwargs={\"do_sample\": True, \"max_length\": 100})"
    ]
   },
   {
